Add splash image and change ratios

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 </div>
 
 <div class="splash-container">
+	<img src="assets/splash-scooter.jpg" style="width:max-content;">
     <div class="splash">
         <h1 class="splash-head">Welcome to Moovify</h1>
         <p class="splash-subhead">
