--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 
 <div class="splash-container">
-	<img src="assets/splash-scooter.jpg" style="width:-webkit-fill-available;">
+	<img src="assets/splash-scooter.jpg">
     <div class="splash">
         <h1 class="splash-head">Welcome to Moovify</h1>
         <p class="splash-subhead">
