Fix for image sizing. WIP: iphone 7 bug

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     </div>
 </div>
 
-<div class="splash-container">
-	<img src="assets/splash-scooter.jpg">
+<div class="splash-container" style="overflow: hidden;background-size: cover;background-position: center; background-image: url('assets/splash-scooter.jpg')">
     <div class="splash">
         <h1 class="splash-head">Welcome to Moovify</h1>
         <p class="splash-subhead">
